--- a/fe/src/index.html
+++ b/fe/src/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>HSM Projects</title>
+  <title>HMS Projects</title>
   <!-- Favicon -->
   <link href="./assets/img/brand/Favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
