--- a/fe/src/index.html
+++ b/fe/src/index.html
@@ -20,6 +20,7 @@
 
 <head>
   <base href="/">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAajQeNa7v3pLulMcHZ5D2hVm89Q408d8&libraries=visualization"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Design System for Bootstrap 4.">
